--- a/about.html
+++ b/about.html
@@ -1,10 +1,7 @@
-<?php
-    // ShowHeader();
-?>
 <html>
     <head>
         <meta charset="UTF-8">
-            <title>Fellowship</title>
+            <title>About</title>
             <link rel="stylesheet" href="common.css">
         <style>
         </style>
@@ -18,7 +15,7 @@
                 <div style='position: relative; top: 10px;'>LACRM FELLOWSHIP</div>
             </div>
             <div class='NavMenuWrapper'>
-                <div>About</div>
+                <div style='font-weight: 600'>About</div>
                 <div>Curriculum</div>
                 <div>Apply</div>
                 <div>Speaker series</div>
@@ -26,9 +23,11 @@
             </div>
         </div>
         <div class='MainWrapper_Vertical'>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+                The LACRM fellowship is a paid summer program where a small cohort of fellows will get to learn the basics of web development and build 
+                off of that knowledge to create their own project with the help of a dedicated mentor.
+            </div>
+            <a href='https://www.lessannoyingcrm.com/careers/fellowship'>Official fellowship site</a>
         </div>
     </body>
 </html>
